--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -20,36 +20,57 @@
 
   <% if @tips %>
     <% @tips.each do |tip|  %>
+    <div class="cardtips">
+      <a class="tipsimage" href="#">
+        <i class="fa-solid fa-utensils"></i>
+      </a>
       <li>
-        <p>Name: <%= tip.name %></p>
-        <p>Content: <%= tip.description  %></p>
-        <p>Challenge category: <%= tip.challenge.category  %></p>
+      <div class="info d-flex justify-content-between">
+        <h5><strong><p><%= tip.name %></p></strong><br></h5>
         <% if current_user.saved_tips.where(tip: tip).empty? %>
-          <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+          <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa-regular fa-bookmark"></i>
+          <% end %>
         <% else %>
           <% st = current_user.saved_tips.select{ |st| st if st.tip_id == tip.id } %>
-          <%= link_to "Unsave this tip", saved_tip_path(st), data: {turbo_method: :delete} %>
+          <%= link_to saved_tip_path(st), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
         <% end %>
+      </div>
+      <p><%= tip.description.truncate(50)  %></p>
+      <%# <p>Challenge category: <%= tip.challenge.category  %>
       </li>
+    </div>
     <% end %>
-    <% end %>
+  <% end %>
 
     <% if @usertips %>
     <% @usertips.each do |tip|  %>
+      <div class="cardtips">
+        <a class="tipsimage" href="#">
+          <i class="fa-solid fa-utensils"></i>
+        </a>
       <li>
-        <p>Name: <%= tip.name %></p>
-        <p>Content: <%= tip.description  %></p>
-        <p>Challenge category: <%= tip.booking.challenge.category  %></p>
+      <div class="info d-flex justify-content-between">
+        <h5><strong><p>Name: <%= tip.name %></p></strong><br></h5>
         <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
-          <%= link_to "Save this tip", usertip_saved_user_tips_path(tip), data: {turbo_method: :post} %>
+          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
+            <i class="fa-regular fa-bookmark"></i>
+          <% end %>
         <% else %>
           <% sut = current_user.saved_user_tips.select{ |sut| sut if sut.usertip_id == tip.id } %>
-          <%= link_to "Unsave this tip", saved_user_tip_path(sut), data: {turbo_method: :delete} %>
+          <%= link_to saved_user_tip_path(sut), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
         <% end %>
+      </div>
+        <p><%= tip.description.truncate(50)  %></p>
+        <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
       </li>
+    </div>
     <% end %>
     <% end %>
-
   </ul>
 </div>
 ```
